I'm so much closer to the correct spacing

--- a/style/index.css
+++ b/style/index.css
@@ -18,19 +18,18 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {  
 margin: 0;  
 padding: 0;  
-/* border: 0;   */
+border: 0;   
 font-size: 100%;  
 font: inherit;  
 vertical-align: baseline;  
 }
 *{
     box-sizing: border-box;
-    border: 1px solid grey;
     max-width: 100%;
 }
 /*General styles here*/
 html{
-    62.5%
+    font-size: 62.5%
 }
 body{
     font-size: 1.8rem;
@@ -38,15 +37,14 @@ body{
     font-family: 'Cormorant Garamond', serif;
 }
 
-section{
-    padding: 4% 0;
-}
-
 h1{
     font-family: 'Syne', sans-serif;
     letter-spacing: 3px;
     padding: 4% 0;
     font-size: 4rem;
+}
+section{
+    padding: 4% 0;
 }
 /*This is the header section style*/
 header{
@@ -67,7 +65,7 @@ h1, nav{
     background-color: white;
     text-decoration: none;
     color: palevioletred;
-    padding: 1% 0;
+    padding: 4% 0;
 }
 #about nav .black{
     background-color: black;
@@ -78,11 +76,11 @@ h1, nav{
     padding: 5% 0;
 }
 .headerContent .img{
-    border-radius: 50%;
+    border-radius: 20%;
     padding: 5px;
 }
 .profilepic{
-    width: 30%;
+    width: 10%;
 }
 .headerContent .about{
     width: 60%;
@@ -104,62 +102,40 @@ button {
     font-size:16px;
   }
 /*This is the intro section style*/
+section{
+    padding: 4% 0;
+}
+#messymiddle{
+    height: 8vh;
+    display: flex;  
+    flex-wrap: wrap;    
+    justify-content: space-evenly;
+    
+}
 
-.content{
-    width: 800px;
-    border: solid black 2px;
-    margin: 0 auto;
-    padding: 10%;
-}
-.content .allimages{
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: space-around;
-}
-.content .allimages .image{
-    width: 50%;
-    height: 30%;
-    background: white;
-    margin: 5px 2.5%;
-    color: black;
+#messymiddle div{
+    width: 21%;
+    margin: 2%;
     display: flex;
-    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
-.image, h3{
-    display: flex;
-    flex-direction: column;
-    color: black;
+
+#messymiddle img{
+    border-radius: 50px;
+    padding: 15%;
+    width: 150px;
 }
-.image1{
-    flex:1;
-}
-.image2{
-    flex:1;
-}
-.image3{
-    flex:1;
-}
-.image4{
-    flex:1;
-}
-.image5{
-    flex:1;
-}
-.image6{
-    flex:1;
-}
-.image7{
-    flex:1;
-}
-.image8{
-    flex:1;
-}
+
+
 /*This is the footer style*/
 
-#contact{
+#footer{
+    height: 30vh;
     background-color: mediumturquoise;
     display:flex;
     flex-direction: column;
     align-items: center;
-
+    padding-top: 15%;
 }
